# filesync-rust

./: .gitignore  Makefile
docx-to-json/: Cargo.toml  Makefile  output.json  zsv251110-List.docx
docx-to-json/src/: main.rs  model.rs
dufs/: Cargo.toml  Dockerfile  Dockerfile-ecr-rel  Dockerfile-release  Makefile
dufs/src/: args.rs
keycloak-rs/: Cargo.toml  Makefile
keycloak-rs/src/: main.rs
webfs/: .dockerignore  .env  Cargo.toml  Dockerfile  Makefile  build.rs  config-test.yaml  config.yaml  files.db  output.json
webfs/src/: lib.rs  storage.rs
webfs/src/auth/: handler.rs  keycloak.rs  mod.rs
webfs/src/cli/rssfeed/: main.rs
webfs/src/cli/utils/: main.rs
webfs/src/cli/webfs/: main.rs
webfs/src/models/: auth.rs  file_desc.rs  files.rs  formatter.rs  mod.rs
webfs/src/webfs/: file_monitor.rs  handler.rs  mod.rs
webui/: .env.release  Cargo.toml  Makefile  README.md  Trunk.local.toml  Trunk.toml  build.rs  index.html  package.json  tailwind.config.js  trunk-serve.sh
webui/locales/: en.json  fr.json  zh.json
webui/public/: styles-built.css  styles.css  styles.scss
webui/src/: api.rs  app_state.rs  icons.rs  langs.rs  lib.rs  main.rs  storage.rs
webui/src/components/: calendar.rs  counter_btn.rs  main_top_nav.rs  mod.rs  private.rs  top_folder_nav.rs
webui/src/models/: auth.rs  channel.rs  mod.rs
webui/src/pages/: audio.rs  custom.rs  folder.rs  home.rs  login.rs  login_new.rs  mod.rs  photos.rs  videos.rs
