[package]
name = "webfs"
version = "0.1.0"
edition = "2021"

[lib]
name = "webfs"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
docx-rs = "0.4"          # reads .docx files
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
jsonwebtoken = "9"
serde_json = "1.0"
base64 = "0.21"
lazy_static = "1.5"
redb = "2.1"
regex = "1.10"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.11.0"
bytesize = "2.2.0"
anyhow = "1.0.100"
quick-xml = "0.38.4"
uuid = "1.18.1"
serde_yaml = "0.9.34"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "chrono"] }

[[bin]]
name = "webfs"  # ← Custom executable name
path = "src/cli/webfs/main.rs"

[[bin]]
name = "rssfeed"  # ← Custom executable name
path = "src/cli/rssfeed/main.rs"

[[bin]]
name = "utils"  # ← Custom executable name
path = "src/cli/utils/main.rs"
