[package]
name = "webfs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "webfs"
path = "src/lib.rs"

[dependencies]
axum = "0.8.7"
docx-rs = "0.4"          # reads .docx files
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
dotenv = "0.15"
jsonwebtoken = "9"
serde_json = "1.0"
base64 = "0.21"
lazy_static = "1.5"
redb = "2.1"
regex = "1.10"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.11.0"
bytesize = "2.2.0"
anyhow = "1.0.100"
quick-xml = "0.38.4"
uuid = "1.18.1"
serde_yaml = "0.9.34"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "chrono"] }
tower-service = "0.3.3"
tower = "0.5.2"
hyper = "1"
mime_guess = "2.0.5"
built = "0.8"
vergen = "9.0.6"
vergen-git2 = "1.0.7"
dotenvy = "0.15.7"

[[bin]]
name = "webfs"  # ← Custom executable name
path = "src/cli/webfs/main.rs"

[[bin]]
name = "rssfeed"  # ← Custom executable name
path = "src/cli/rssfeed/main.rs"

[[bin]]
name = "utils"  # ← Custom executable name
path = "src/cli/utils/main.rs"

[build-dependencies]
built = { version = "0.8", features = ["git2"] }
vergen-git2 = { version = "1.0.0", features = ["build", "cargo", "rustc", "si"] }
