[package]
name = "webui"
version = "0.1.0"
edition = "2021"
authors = ["Mike Chu <mike@dayspringsec.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
urlencoding = "2.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlDocument", "Storage", "console", "Location"] }
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
leptos-use = "0.16.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
